# flower-fl-summer-school

./: Dockerfile  README.md
advanced_messageapi/: README.md  pyproject.toml
advanced_messageapi/pytorch_example_low_level/: client_app.py  server_app.py  task.py
advanced_strategies/: pyproject.toml
advanced_strategies/pytorch_example/: client_app.py  server_app.py  strategy.py  task.py
megadata_challenge/: pyproject.toml
megadata_challenge/app_pytorch/: client_app.py  server_app.py  task.py
