[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-example-low-level"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Advanced Example with Low level API)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "wandb==0.17.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorch_example_low_level.server_app:app"
clientapp = "pytorch_example_low_level.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-clients-train = 0.2
batch-size = 32
local-epochs = 1
use-wandb = true
wandb-token = ""

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 30

[tool.flwr.federations.researchgrid]
address = "researchgrid.flower.ai"
enable-user-auth = true
options.num-supernodes = 20
